[package]
name = "zephyr"
version = "0.1.0"
edition = "2021"
description = "The Zephyr programming language interpreter"
authors = ["Camila 'Mocha' Rose"]

[[bin]]
name = "zephyr"
path = "src/main.rs"

[dependencies]
rustyline = "13.0"
ureq = { version = "2.10", features = ["json"] }

[profile.release]
opt-level = 3
